# keypad-hid

./: Cargo.toml  README.md
.cargo/: config.toml
hardware/: .gitignore  keypad-hid.kicad_prl  keypad-hid.kicad_pro  keypad-hid.kicad_sch
src/: board_pinout.rs  keypad.rs  main.rs  stm32_configuration.rs  usb_keyboard.rs
