[package]
edition = "2024"
name = "keypad-hid"
version = "0.1.0"
authors = ["Kristof Kovacs <kristof.kovacs1996@gmail.com>"]
resolver = "2"

[[bin]]
name = "keypad-hid"
test = false
bench = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f407vg", "memory-x", "time-driver-any"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
usbd-hid = { version = "0.8.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
